NativeBOINC: fixed severe bug in NativeBoincService (fallback killing doesnt works!). Improved NewsActivity. Remove the update binaries notification when all updates has been installed.

--- a/src/NativeBOINC/res/values/colors.xml
+++ b/src/NativeBOINC/res/values/colors.xml
@@ -30,4 +30,6 @@
 	<color name="screenLockBar">#555555</color>
 	<color name="screenLockBarText">#ffffff</color>
 	<color name="notificationText">#080808</color>
+	
+	<color name="newNewsColor">#ffffff</color>
 </resources>
