NativeBOINC: Adding bugcatcher.

--- a/src/NativeBOINC/res/layout/bug_catch.xml
+++ b/src/NativeBOINC/res/layout/bug_catch.xml
@@ -22,11 +22,51 @@
  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/bugCatcherDesc"
         android:textStyle="bold"
         android:padding="10dip"/>
+    <CheckBox android:id="@+id/enableBugCatcher"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/bugCatcher" />
+    
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_weight="1">
+	    <ListView
+			android:id="@android:id/list"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content" />
+	    <View android:layout_width="fill_parent"
+	        android:layout_height="1dip"
+	        android:background="?android:attr/listDivider"/>
+	</LinearLayout>
+	
+    <LinearLayout
+        android:orientation="horizontal"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="right"
+		android:paddingTop="10dip"
+		android:paddingLeft="10dip"
+		android:paddingRight="10dip">
+        <Button android:id="@+id/clear"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/clear" />
+		<Button android:id="@+id/saveToSDCard" 
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/saveToSDCard" />
+		<Button android:id="@+id/sendBugs" 
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="@string/sendBugs" />
+    </LinearLayout>
 </LinearLayout>
