NativeBOINC: added widget previews and battery state sending

--- a/src/NativeBOINC/res/xml/tablet_widget_info.xml
+++ b/src/NativeBOINC/res/xml/tablet_widget_info.xml
@@ -23,5 +23,6 @@
   	android:minWidth="300dp"
   	android:minHeight="300dp"
   	android:updatePeriodMillis="0"
-  	android:initialLayout="@layout/tablet_widget">>
+  	android:previewImage="@drawable/tablet_widget"
+  	android:initialLayout="@layout/tablet_widget">
 </appwidget-provider>
